[tool.poetry]
name = "MD0network"
version = "0.0.4"
description = "A tool to make sending and reciving messages on a netowkr easier"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
